{
  "version": 4,
  "terraform_version": "1.3.2",
  "serial": 714,
  "lineage": "ff276f68-89d0-b760-4dd1-9554bba554f9",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "one",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-027902328c8f814bc",
            "associate_with_private_ip": "10.0.1.50",
            "association_id": "eipassoc-0a6fd1f6afbe04374",
            "domain": "vpc",
            "id": "eipalloc-027902328c8f814bc",
            "network_border_group": "us-east-1",
            "network_interface": "eni-06e846cece3c8258e",
            "private_dns": "ip-10-0-1-50.ec2.internal",
            "private_ip": "10.0.1.50",
            "public_dns": "ec2-52-1-169-61.compute-1.amazonaws.com",
            "public_ip": "52.1.169.61",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.project1-gw",
            "aws_network_interface.project1-web-server-nic",
            "aws_security_group.allow_web",
            "aws_subnet.project1-prod-subnet",
            "aws_vpc.project1-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "project1-web-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b5eea76982371e91",
            "arn": "arn:aws:ec2:us-east-1:076392918214:instance/i-0689ccd90c038dafb",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "Ambulah_S3_Access",
            "id": "i-0689ccd90c038dafb",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Pokemon_keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-06e846cece3c8258e"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-06e846cece3c8258e",
            "private_dns": "ip-10-0-1-50.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.50",
            "public_ip": "52.1.169.61",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d2e52c42d7df53af",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0cfad02980b9f5be5",
            "tags": {
              "Name": "Project3_Instance"
            },
            "tags_all": {
              "Name": "Project3_Instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08db203a2590ea2c2"
            ]
          },
          "dependencies": [
            "aws_network_interface.project1-web-server-nic",
            "aws_security_group.allow_web",
            "aws_subnet.project1-prod-subnet",
            "aws_vpc.project1-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "project1-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:076392918214:internet-gateway/igw-01b1012138165cc11",
            "id": "igw-01b1012138165cc11",
            "owner_id": "076392918214",
            "tags": {
              "Name": "Project1-IG"
            },
            "tags_all": {
              "Name": "Project1-IG"
            },
            "vpc_id": "vpc-02e1f7c11a670980b"
          },
          "dependencies": [
            "aws_vpc.project1-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "project1-web-server-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:076392918214:network-interface/eni-06e846cece3c8258e",
            "id": "eni-06e846cece3c8258e",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "02:f8:64:af:f5:83",
            "owner_id": "076392918214",
            "private_ip": "10.0.1.50",
            "private_ip_list": [
              "10.0.1.50"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.1.50"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-08db203a2590ea2c2"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0cfad02980b9f5be5"
          },
          "dependencies": [
            "aws_security_group.allow_web",
            "aws_subnet.project1-prod-subnet",
            "aws_vpc.project1-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "project1-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:076392918214:route-table/rtb-0803db28027e48dba",
            "id": "rtb-0803db28027e48dba",
            "owner_id": "076392918214",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01b1012138165cc11",
                "instance_id": "",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01b1012138165cc11",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Project1-RT"
            },
            "tags_all": {
              "Name": "Project1-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-02e1f7c11a670980b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.project1-gw",
            "aws_vpc.project1-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07f153fcd35e620d8",
            "route_table_id": "rtb-0803db28027e48dba",
            "subnet_id": "subnet-0cfad02980b9f5be5"
          },
          "dependencies": [
            "aws_internet_gateway.project1-gw",
            "aws_route_table.project1-rt",
            "aws_subnet.project1-prod-subnet",
            "aws_vpc.project1-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:076392918214:security-group/sg-08db203a2590ea2c2",
            "description": "Allow Web Inboundtraffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08db203a2590ea2c2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP Traffic",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS Traffic",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH Access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_web_traffic",
            "name_prefix": "",
            "owner_id": "076392918214",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_Web"
            },
            "tags_all": {
              "Name": "allow_Web"
            },
            "timeouts": null,
            "vpc_id": "vpc-02e1f7c11a670980b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.project1-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "project1-prod-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:076392918214:subnet/subnet-0cfad02980b9f5be5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cfad02980b9f5be5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "076392918214",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Project1-Prod-Subnet"
            },
            "tags_all": {
              "Name": "Project1-Prod-Subnet"
            },
            "vpc_id": "vpc-02e1f7c11a670980b"
          },
          "dependencies": [
            "aws_vpc.project1-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "project1-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:076392918214:vpc/vpc-02e1f7c11a670980b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-02e65842dfb596ee8",
            "default_route_table_id": "rtb-058d4885050159ea8",
            "default_security_group_id": "sg-0e1d2bebde5e987ed",
            "dhcp_options_id": "dopt-0a848d73d4d8034a3",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-02e1f7c11a670980b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-058d4885050159ea8",
            "owner_id": "076392918214",
            "tags": {
              "Name": "Project1-VPC"
            },
            "tags_all": {
              "Name": "Project1-VPC"
            }
          }
        }
      ]
    }
  ]
}